# metakit

./: .gitignore  .scalafix.conf  .scalafmt.conf  README.md  TASK-all-ops-comparison.md  build.sbt
.github/workflows/: release.yml
docs/jlvm-spec/: jlvm-spec.md
docs/mpt-spec/: test-proof.json
docs/mpt-spec/go/: go.mod  mpt-verifier  run.sh  setup.sh  verifier.go
docs/mpt-spec/js/: README.md  example-usage.js  merkle-patricia-verifier.js  package-lock.json  package.json  test.js  verifier-standalone.html
docs/mpt-spec/python/: merkle_patricia_verifier.py  requirements.txt  run.sh  setup.sh
docs/mpt-spec/rust/: Cargo.toml  run.sh  setup.sh
docs/mpt-spec/rust/src/: main.rs
docs/mpt-spec/solidity/: MerklePatriciaVerifier.sol  README.md  generateCalldata.js  test-proof-calldata.txt
docs/sig-spec/: CROSS_VERIFICATION_README.md  python_verification_example.py  requirements.txt  scala_verification_worksheet.sc  signature-protocol-developer-guide.md
docs/sig-spec/go/: go.mod  go.sum  main.go  setup_go_env.sh  test_vectors.json
docs/sig-spec/js/: javascript_verification_example.js  package-lock.json  package.json  setup_javascript_env.sh  test_vectors.json
docs/sig-spec/python/: python_verification_example.py  requirements.txt  setup_python_env.sh  test_vectors.json
docs/sig-spec/rust/: Cargo.toml  setup_rust_env.sh  test_vectors.json
docs/sig-spec/rust/src/: main.rs
project/: Dependencies.scala  plugins.sbt
src/test/resources/output/: weird.hex
src/test/scala/generators/: package.scala
src/test/scala/json_logic/: AllOperatorsComparisonSuite.scala  (+9 more)
(+114 files in other folders)
