[package]
name = "constellation-sig-spec"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
secp256k1 = { version = "0.28", features = ["rand-std", "hashes"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
anyhow = "1.0"